--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body >
 		<div id="header">
 			<div id="Logo">
-				<img src="slike/logo1.png" alt="logo1"/>
+				<a href="index.html"><img src="slike/logo1.png" alt="logo1"/></a>
 			</div>
 			<div id="navigacija">
 					<ul>
@@ -82,7 +82,7 @@
 				</div>
 			</div>
 			<div id="footer">
-				<p><b>&copy; Copyright</b></p>
+				<p><b>&copy; Copyright Cacti</b></p>
 			</div>
 		</div>
 	</body>
